# tripwire

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
configs/: decision.yaml  drift.yaml  features.yaml  ingestion.yaml  pipeline.yaml
docs/: API_SPEC.md  ARCHITECTURE.md  CODING_STANDARDS.md  DECISIONS.md  PRD.md  TESTING_STRATEGY.md
docs/learning/: 01-project-setup-and-first-feature.md
scripts/: build_dataset.py  check_drift.py  consume_stream.py  promote_shadow.py  replay_stream.py  train_baseline.py
src/: config.py
src/features/: amount_features.py  type_features.py  velocity_features.py
src/ingestion/: paysim_loader.py  stream_consumer.py  stream_producer.py
src/models/: baseline.py  registry.py
src/monitoring/: drift.py  synthetic_drift.py
src/pipelines/: build_training_table.py  train_and_register.py
src/serving/: app.py  decision_engine.py
tests/feature_parity/: test_amount_features.py  test_type_features.py  test_velocity_features.py
tests/integration/: test_stream_roundtrip.py
tests/unit/: test_baseline.py  test_build_training_table.py  test_decision_engine.py  test_drift.py  test_paysim_loader.py  test_serving_app.py
