[project]
name = "tripwire"
version = "0.1.0"
description = "Real-time transaction fraud & anomaly detection platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "kafka-python>=3.0.8",
    "lightgbm>=4.7.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.51.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.3.0",
    "pandas-stubs>=3.0.3.260530",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
